--- a/views/layout.jade
+++ b/views/layout.jade
@@ -3,5 +3,7 @@ html
   head
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
+    script(type='text/javascript', src= '/javascripts/jquery-2.1.4.min.js')
+    script(type='text/javascript', src= '/javascripts/client.js')
   body
     block content
