--- a/views/index.jade
+++ b/views/index.jade
@@ -16,3 +16,5 @@ block content
   
   form(action='/pairs',method='post')
     input(type='submit',value='Generate Pairs')
+  
+  button(onclick="send()") jquery post
